Add quiet class and include a note for non-members.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -157,7 +157,17 @@ header {
 			font-size: 1.4em;
 		}
 	}
+	
+	// quiet
+	.quiet {
+		font-size: .85em;
+		line-height: 1.4em;
+		font-color: $grey;	
+	}
 }
+
+
+
 
 
 
