--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -19,6 +19,13 @@ $orange: #C74B27;
 
 
 
+// colors
+.bg-orange { background: $orange; }
+.bg-teal { background: $teal; }
+.bg-grey { background: $grey; }
+
+
+
 // background-container
 .container {
 	background: white;
@@ -72,12 +79,38 @@ header {
 .intro {
 	.thermometer {
 		margin: 0 auto;
+
 	}
 
 	@include respond-to( 500px ) {
 		.thermometer {
 			float: right;
 			margin: 0 0 0 20px;
+			
+			/*
+			&:before {
+				content: "";
+				width: 120px;
+				height: 70px;
+				background: url(../img/backpack-count.png) center center no-repeat;
+				font-size: .6em;
+				position: absolute;
+				bottom: 80px;
+				left: 110px;
+			}
+
+			&:after {
+				content: "17";
+				width: 120px;
+				font-size: 1em;
+				line-height: 1.6em;
+				text-align: center;
+				position: absolute;
+				bottom: 25px;
+				left: 110px;
+				border: 4px solid $teal;
+			}
+			*/
 		}
 	}
 	
@@ -88,10 +121,33 @@ header {
 
 
 
-// colors
-.bg-orange { background: $orange; }
-.bg-teal { background: $teal; }
-.bg-grey { background: $grey; }
+.thirds {
+	padding: 30px 0;
+
+	.third {
+
+		.third-header {
+			display: block;
+		}
+
+		.third-content {
+			background: #b2c3c4;
+			font-size: 1.6em;
+			line-height: 1.5em;
+			padding: 25px;
+			text-align: center;
+		}
+
+		.third-footer {
+			background: $orange;
+			color: white;
+			font-size: 1.4em;
+			padding: 10px;
+			text-align: center;
+		}
+
+	}
+}
 
 
 
